--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "gifman",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "A GIF capture solution which combines several tools/libraries.",
   "main": "index.js",
   "author": "Jake Gealer",
   "license": "MPL-2.0",
   "dependencies": {
     "aperture": "5.2.0",
-    "ffmpeg-static": "2.4.0",
+    "ffmpeg-static-magiccap": "2.4.0",
     "temp-dir": "1.0.0",
     "uuid": "3.3.2",
     "fs-nextra": "0.4.3"
